--- a/article/sections/2_abstract.tex
+++ b/article/sections/2_abstract.tex
@@ -12,6 +12,5 @@
     pela SBC. É solicitada a escrita de resumo e abstract apenas para os artigos
     escritos em português. Artigos em inglês deverão apresentar apenas abstract.
     Nos dois casos, o autor deve tomar cuidado para que o resumo (e o abstract)
-    não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira
-    página do artigo. Uma simples alteração.
+    não ultrapassem 10 linhas cada, sendo que ambos devem estar na primeira página do artigo. Uma simples alteração.
   \end{resumo}
